[package]
name = "rcore"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sbi-spec = "0.0.5"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
riscv = { version = "0.10.1" }
bit_field = "0.10.0"
